--- a/i18n/vscode-language-pack-uk/translations/main.i18n.json
+++ b/i18n/vscode-language-pack-uk/translations/main.i18n.json
@@ -140,15 +140,15 @@
 			"stackTrace.format": "{0}: {1}"
 		},
 		"vs/base/common/jsonErrorMessages": {
-			"error.closeBraceExpected": "Потрібна фігурна дужка, що закриває",
-			"error.closeBracketExpected": "Потрібна квадратна дужка, що закриває",
+			"error.closeBraceExpected": "Необхідна закриваюча фігурна дужка",
+			"error.closeBracketExpected": "необхідна закриваюча квадратна дужка",
 			"error.colonExpected": "Потрібна двокрапка",
 			"error.commaExpected": "Потрібна кома",
-			"error.endOfFileExpected": "Очікується кінець файлу",
+			"error.endOfFileExpected": "Очікувався кінець файлу",
 			"error.invalidNumberFormat": "Неприпустимий числовий формат",
 			"error.invalidSymbol": "Неприпустимий символ",
-			"error.propertyNameExpected": "Потрібне ім'я якості",
-			"error.valueExpected": "Потрібне значення"
+			"error.propertyNameExpected": "Необхідна назва властивості",
+			"error.valueExpected": "Необхідне значення"
 		},
 		"vs/base/common/keybindingLabels": {
 			"altKey": "ALT",
@@ -194,7 +194,7 @@
 			"completeInEnglish": "Заповніть форму англійською мовою.",
 			"descriptionEmptyValidation": "Потрібно вказати опис.",
 			"details": "Введіть інформацію.",
-			"disableExtensions": "відключення всіх розширень та перезавантаження вікна",
+			"disableExtensions": "Відключення всіх розширень та перезавантаження вікна",
 			"disableExtensionsLabelText": "Спробуйте відтворити проблему після {0}. Якщо проблема з'являється тільки тоді, коли розширення включено, то це швидше за все проблема з розширенням.",
 			"extensionWithNoBugsUrl": "Засобу повідомлення про проблеми не вдалося зареєструвати проблеми для цього розширення, оскільки воно не вказує URL-адресу для повідомлення про проблеми. Перегляньте сторінку цього розширення в Marketplace, щоб дізнатися, чи є інші інструкції.",
 			"extensionWithNonstandardBugsUrl": "Засобу повідомлення про проблеми не вдається зареєструвати проблеми для цього розширення. Щоб повідомити про проблему, перейдіть на адресу {0}.",
@@ -1381,7 +1381,7 @@
 			"lines.sortAscending": "Сортування строків зростання",
 			"lines.sortDescending": "Сортування рядків за спаданням",
 			"lines.trimTrailingWhitespace": "Видалити кінцеві символи-розділювачі",
-			"miCopyLinesDown": "Копіювати на рядок \u0026нижче",
+			"miCopyLinesDown": "Копіювати на рядок нижче",
 			"miCopyLinesUp": "\u0026\u0026Копіювати на рядок вище",
 			"miDuplicateSelection": "\u0026\u0026Дублювати вибране",
 			"miMoveLinesDown": "\u0026\u0026Перемістити на рядок нижче",
@@ -3173,7 +3173,7 @@
 			"duplicateWorkspace": "Дублювати робочу область",
 			"duplicateWorkspaceInNewWindow": "Створити копію робочої області у новому вікні",
 			"globalRemoveFolderFromWorkspace": "Видалити папку з робочої області.",
-			"miAddFolderToWorkspace": "Д\u0026\u0026додати папку в робочу область...",
+			"miAddFolderToWorkspace": "\u0026\u0026Додати папку в робочу область...",
 			"miCloseFolder": "Закрити \u0026\u0026папку",
 			"miCloseWorkspace": "Закрити \u0026\u0026робочу область",
 			"miOpen": "\u0026\u0026Відкрити...",
@@ -5155,7 +5155,7 @@
 			"removeWatchExpression": "Видалити вираз",
 			"restartFrame": "Перезапустити кадр",
 			"run": "Запуск або налагодження...",
-			"run and debug": "Запуск та налагодження",
+			"run and debug": "Запуск і дебаг",
 			"setValue": "Задати значення",
 			"showBreakpointsInOverviewRuler": "Визначає, чи потрібно відображати точки зупинки на оглядовій лінійці.",
 			"showErrors": "Відображення проблем без запуску налагодження.",
@@ -6621,7 +6621,7 @@
 			"cut": "Вирізати",
 			"deleteFile": "Видалити назавжди",
 			"explorerOpenWith": "Відкрити з допомогою...",
-			"miAutoSave": "А\u0026\u0026збереження",
+			"miAutoSave": "\u0026\u0026Автозбереження",
 			"miCloseEditor": "\u0026\u0026Закрити редактор",
 			"miGotoFile": "Перейти до \u0026\u0026файлу...",
 			"miNewFile": "\u0026\u0026Створити текстовий файл",
@@ -8430,7 +8430,7 @@
 			"terminal": "Термінал",
 			"testing": "Тестування",
 			"textEditor": "Текстовий редактор",
-			"timeline": "Тимчасова шкала",
+			"timeline": "Останні зміни",
 			"update": "Оновити",
 			"window": "Вікно",
 			"workbench": "Робоче місце",
@@ -11460,7 +11460,7 @@
 			"enableCrashReporterDeprecated": "Якщо цей параметр має значення false, телеметрія не надсилатиметься незалежно від значення нового параметра. Не рекомендується використовувати, оскільки в новіших версіях ці дані агреговані в параметр {0}.",
 			"keyboardConfigurationTitle": "Клавіатура",
 			"mergeAllWindowTabs": "Об'єднати всі вікна",
-			"miExit": "В\u0026\u0026вихід",
+			"miExit": "\u0026\u0026Вихід",
 			"moveWindowTabToNewWindow": "Перемістити вкладку вікна у нове вікно",
 			"nativeContextMenuLocation": "Дозволити операційній системі керувати розташуванням контекстного меню у випадках, коли меню має з'явитися під вказівником миші.",
 			"newTab": "Вкладка нового вікна",
